# rota_ai_system

./: AI_Rota_System_for_Healthcare.docx  API_USAGE_GUIDE.md  DATABASE_PERSISTENCE.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DOCKER_README.md  Dockerfile.backend  README.md  SETUP.md  Sample_Prompts.md  dev-backend.sh  dev-logs.sh  dev-start.sh  dev-stop.sh  docker-compose.dev-backend.yml  docker-compose.dev.yml  docker-compose.yml  docker-run.bat  docker-run.sh  env.template  healthcare-rota-requirements.md  pyproject.toml  requirements.txt  sample_data.py  setup_and_run.py  start.bat  start.sh  stop.bat  stop.sh  test_assignment.py  test_upload.py
app/: __init__.py  database.py  main.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  data_processor.py  openai_service.py  rota_service.py  travel_service.py
data/: rota_operations.db
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Assignments.jsx  CreateAssignment.jsx  Dashboard.jsx  DataUpload.jsx  Employees.jsx  Patients.jsx
frontend/src/store/: useStore.js
input_files/: Final_Employee_Patient_Data.xlsx  Updated_Healthcare_Rota_System_Data.xlsx
